# tts-bot

./: .gitignore  Cargo.toml
src/: commands.rs  discord.rs  events.rs  main.rs  voicevox.rs
src/commands/: hello.rs  join.rs  voice.rs
