[package]
name = "tts-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
const_format = "0.2.35"
voicevox_core = { git = "https://github.com/VOICEVOX/voicevox_core.git", tag = "0.16.3", version = "0.0.0", features = ["load-onnxruntime"] }

poise = "0.6.1"
songbird = { version = "0.5.0", features = ["builtin-queue"] }
symphonia = { version = "0.5.5", features = ["mp3", "wav"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"]}

dotenv = "0.15.0"
